Fix next arrow sizing and intro-thank sizing on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@
     z-index: 3;
   } 
 
-  #next-arrow-wrapper img{
+  #next-arrow-wrapper > *{
     height: 30%;
     width: 30%;
   }
@@ -198,6 +198,9 @@
         padding: 10px;
         box-sizing: border-box;
     }
+    #intro-thank{
+        font-size: 1rem;
+    }
     #intro-right{
         display: none;
     }
@@ -236,6 +239,9 @@
       height: auto;          
       min-height: 36vh;      
       margin-top: 20vh;       
+    }
+    #intro-thank{
+        font-size: 1rem;
     }
     .header{
       font-size: 1rem;
